Images in comments
It is possible to paste images in  comments to pull requests.

Co-authored-by: René Pfeuffer<rene.pfeuffer@cloudogu.com>